#50: fix exam-judging-service