@@ -12,4 +12,4 @@ ENV VERSION ${VERSION}
 WORKDIR /opt/swe2023brown/exam-judging-service
 COPY --from=builder /opt/swe2023brown/exam-judging-service/exam-judging-service/build/libs/exam-judging-service-${VERSION}.jar .
 COPY --from=builder /opt/swe2023brown/exam-judging-service/exam-judging-service/src/main/conf/lib /opt/swe2023brown/exam-judging-service/lib
-CMD java -Dlog.dir=/var/log/swe2023brown/exam-judging-service -jar exam-judging-service-${VERSION}.jar --spring.config.location=classpath:/application.yml,optional:/etc/swe2023brown/exam-judging-service/application.yml
+CMD java --enable-preview -Dlog.dir=/var/log/swe2023brown/exam-judging-service -jar exam-judging-service-${VERSION}.jar --spring.config.location=classpath:/application.yml,optional:/etc/swe2023brown/exam-judging-service/application.yml
